# i2c_lib

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build.yml
drivers/: i2c_devices.c  i2c_devices.h
examples/: example_all_devices.c
include/: i2c.h
src/: i2c.c
